--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,29 +1,34 @@
 name: CI
+
 on:
   push:
-    branches: [main]
-  workflow_dispatch:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
+
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout repo
+        uses: actions/checkout@v3
+
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.11'
+
       - name: Install dependencies
         run: |
+          python -m pip install --upgrade pip
           pip install -r requirements.txt
-      - name: Lint
-        run: flake8 .
-      - name: Test
-        run: pytest tests/
-      - name: Docker Build & Push
+
+      - name: Run linter (flake8)
         run: |
-          echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
-          docker build -t ghcr.io/${{ github.repository }}:latest .
-          docker push ghcr.io/${{ github.repository }}:latest
-      - name: Notify Slack
+          pip install flake8
+          flake8 .
+
+      - name: Run tests
         run: |
-          curl -X POST -H 'Content-type: application/json' --data '{"text":"CI завершено!"}' ${{ secrets.SLACK_WEBHOOK }}
+          PYTHONPATH=. pytest tests/
