--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,34 +1,30 @@
 name: CI
-
 on:
   push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+    branches: [main]
+  workflow_dispatch:
 
 jobs:
-  test:
+  build:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
-
+      - uses: actions/checkout@v3
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.11'
-
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
           pip install -r requirements.txt
-
-      - name: Run linter (flake8)
+      - name: Lint
+        run: flake8 .
+      - name: Test
+        run: pytest tests/
+      - name: Docker Build & Push
         run: |
-          pip install flake8
-          flake8 .
-
-      - name: Run tests
+          echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+          docker build -t ghcr.io/${{ github.repository }}:latest .
+          docker push ghcr.io/${{ github.repository }}:latest
+      - name: Notify Slack
         run: |
-          PYTHONPATH=. pytest tests/
+          curl -X POST -H 'Content-type: application/json' --data '{"text":"CI завершено!"}' ${{ secrets.SLACK_WEBHOOK }}
